--- a/chickencollector/main_app/templates/chickens/detail.html
+++ b/chickencollector/main_app/templates/chickens/detail.html
@@ -1,19 +1,58 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Chicken Collector</h1>
+<h1>Chicken Details</h1>
 
-<div class="card">
-    <div class="card-content">
-        <span class="card-title">{{ chicken.name }}</span>
-        <p>Breed: {{ chicken.breed }}</p>
-        <p>Description: {{ chicken.description }}</p>
-        {% if chicken.age > 0 %}
-            <p>Age: {{ chicken.age }}</p>
-        {% else %}
-            <p>Age: Chick</p>
-        {% endif %}
+<div class="row">
+    <div class="col s6">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ chicken.name }}</span>
+                <p>Breed: {{ chicken.breed }}</p>
+                <p>Description: {{ chicken.description }}</p>
+                {% if chicken.age > 0 %}
+                    <p>Age: {{ chicken.age }}</p>
+                {% else %}
+                    <p>Age: Chick</p>
+                {% endif %}
+            </div>
+            <div class="card-action">
+                <a href="{% url 'chickens_update' chicken.id %}">Edit</a>
+                <a href="{% url 'chickens_delete' chicken.id %}">Delete</a>
+            </div>
+        </div>
+    </div>
+    <div class="col s6">
+        <form action="{% url 'add_feeding' chicken.id %}" method="POST">
+            {% csrf_token %}
+            {{ feeding_form.as_p }}
+            <input type="submit" class="btn" value="Add Feeding">
+        </form>
+        <table class="striped">
+            <thead>
+                <tr><th>Date</th><th>Meal</th></tr>
+            </thead>
+            <tbody>
+                {% for feeding in chicken.feeding_set.all %}
+                    <tr>
+                        <td>{{feeding.date}}</td>
+                        <td>{{feeding.get_meal_display}}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
+<script>
+    const dateEl = document.getElementById('id_date');
+    M.Datepicker.init(dateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
 
+    const selectEl = document.getElementById('id_meal');
+    M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
