--- a/chickencollector/main_app/templates/base.html
+++ b/chickencollector/main_app/templates/base.html
@@ -8,6 +8,7 @@
   <title>Chicken Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
   <header class="navbar-fixed">
@@ -18,6 +19,7 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'chickens_create' %}">Add a Chicken</a></li>
           <li><a href="{% url 'index' %}">View All My Chickens</a></li>
           
         </ul>
