--- a/chickencollector/main_app/templates/chickens/detail.html
+++ b/chickencollector/main_app/templates/chickens/detail.html
@@ -42,7 +42,46 @@
             </tbody>
         </table>
     </div>
-</div>
+    <div class="row">
+        <div class="col s6">
+            <h3>{{ chicken.name }}'s Toys</h3>
+            {% if chicken.toys.count %}
+                {% for toy in chicken.toys.all %}
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">
+                            A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+                        </span>
+                    </div>
+                </div>
+            {% endfor %}
+        {% else %}
+        <h5>No Toys :(</h5>
+        {% endif %}
+        </div>
+    </div>
+    <div class="col s6">
+        <h3>Available Toys</h3>
+        {% if toys.count %}
+            {% for toy in toys.all %}
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">
+                            A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+                        </span>
+                    </div>
+                <div class="card-action">
+                    <form action="{% url 'assoc_toy' chicken.id toy.id %}" method="POST">
+                        {% csrf_token %}
+                        <button type="submit" class="btn">Add</button>
+                    </form>
+                </div>
+            </div>
+        {% endfor %}
+        {% else %}
+            <h5>{{ chicken.name }} Already Has All Toys Available</h5>
+        {% endif %}
+    </div>
 <script>
     const dateEl = document.getElementById('id_date');
     M.Datepicker.init(dateEl, {
